# LION

./: .dockerignore  .env.example  .env.local  .gitignore  README.md  exploit.py  lionfish_yolo.py  package-lock.json  package.json  pyproject.toml
app/: globals.css  layout.tsx  page.module.css  page.tsx
app/api/live-lab/detect/: route.ts
app/api/live-lab/upload/: route.ts
app/components/: gallery-frame.module.css  gallery-frame.tsx  live-lab.tsx  species-map-client.tsx  species-map.module.css  species-map.tsx  undersea-network.tsx
app/lib/: detector-config.ts  lion-data.ts  live-lab-types.ts
app/model-analytics/: page.module.css  page.tsx
app/model-report/: page.module.css  page.tsx
datasets/lionfish-1/: README.dataset.txt  README.roboflow.txt  data.yaml
datasets/lionfish-1/test/: labels.cache
figma_capture/: index.html  script.js  styles.css
lionfish_hosted.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
paper_yolov8.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
public/media/: invasive_marine_species_points (1).csv
runs/lionfish/: last_run.json
runs/lionfish/hosted-predict/: 120391-720880500_small.json
runs/paper/lionfish/: last_run.json
runs/paper/lionfish/hosted-predict/: 0001_Facts_-The-Lionfish---YouTube---Google-Chrome-2021-11-05-15-41-10_mp4-0_jpg.rf.06941a03cabb063caa373573523f7fdd.json  (+15 more)
services/marine_detect_api/: Dockerfile  HF_SPACE_README.md  main.py
webapp/: package-lock.json  package.json
webapp/app/: globals.css  layout.tsx  page.module.css  page.tsx
webapp/app/components/: gallery-frame.tsx
(+7 files in other folders)
