[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lionfish-hosted"
version = "0.3.0"
description = "Hosted Roboflow lionfish inference for images and video."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "roboflow>=1.1.0,<2",
  "opencv-python>=4.8,<5",
]

[project.scripts]
lionfish-yolo = "lionfish_yolo:main"

[tool.setuptools]
py-modules = ["lionfish_yolo"]
