[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lionfish-hosted"
version = "0.4.0"
description = "Hosted and local marine-species inference for images and video."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "roboflow>=1.1.0,<2",
  "opencv-python>=4.8,<5",
  "ultralytics>=8.3,<9",
]

[project.scripts]
lionfish-yolo = "lionfish_yolo:main"

[tool.setuptools]
py-modules = ["lionfish_yolo"]
